[package]
name = "crazyradio-webusb"
version = "0.1.0"
authors = ["Arnaud Taffanel <arnaud@taffanel.org>"]
edition = "2018"

[dependencies]
thiserror = "1.0"
wasm-bindgen-futures = "0.4"
serde_json = "1.0"
wasm-bindgen = { version = "0.2", features = ["serde-serialize"] }
js-sys = "0.3"
futures-util = "0.3"
async-std = "1"

[dependencies.web-sys]
version = "0.3"
features = [
  'Document',
  'Element',
  'HtmlElement',
  'Node',
  'Window',
  'Navigator',
  'Usb',
  'UsbDeviceRequestOptions',
  'UsbDevice',
  'UsbInTransferResult',
  'UsbControlTransferParameters',
  'UsbOutTransferResult',
  'UsbRecipient',
  'UsbRequestType'
]
